--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h4>London, England</h4>
                 <button class="button">Send Email</button>
             </div>
-            <img class="avatar" src="images/rei.jpg" alt:"Rei avatar">
+            <img class="avatar" src="images/rei.jpg" alt="Rei avatar">
             
         </div>
     </body>
